--- a/ci_cd/release_notes/0.0.1.md
+++ b/ci_cd/release_notes/0.0.1.md
@@ -1,2 +1,2 @@
 ## First test release ##
-This release is for testing the CI/CD.
+This release is only for testing. Don't use it for production builds.
