created new hook for translations, name of navbar tabs can now be a function for translations

--- a/example/src/assets/translations/es.json
+++ b/example/src/assets/translations/es.json
@@ -14,5 +14,6 @@
     "allow_cookies_header": "La aplicación web usas cookies.",
     "allow_cookies_disclaimer": "La aplicación web necesita permiso para usar cookies.",
     "allow_cookies_button": "Permitir cookies",
-    "bytes_example": "{{count}} son 1KiB"
+    "bytes_example": "{{count}} son 1KiB",
+    "example_component": "Ejemplo {{count}}"
 }
