--- a/example/src/assets/translations/de.json
+++ b/example/src/assets/translations/de.json
@@ -1,4 +1,5 @@
 {
     "option_name": "German",
-    "bytes_example": "{{count}} sind 1KiB"
+    "bytes_example": "{{count}} sind 1KiB",
+    "example_component": "Beispiel {{count}}"
 }
