--- a/example/src/assets/translations/en.json
+++ b/example/src/assets/translations/en.json
@@ -1,4 +1,5 @@
 {
     "option_name": "English",
-    "bytes_example": "{{count}} are 1KiB"
+    "bytes_example": "{{count}} are 1KiB",
+    "example_component": "Example {{count}}"
 }
