--- a/example/src/assets/translations/en.json
+++ b/example/src/assets/translations/en.json
@@ -1,5 +1,19 @@
 {
     "option_name": "English",
     "bytes_example": "{{count}} are 1KiB",
-    "example_component": "Example {{count}}"
+    "example_component": "Example {{count}}",
+    "Example_field_local": "Example field local element {{count}}",
+    "Example_global_context": "Example data global context",
+    "Example_local_context": "Example data local context",
+    "changed_with_local_element": "changed with local element",
+    "Change_global_context": "Change global context",
+    "changed_local_state": "changed local state",
+    "Change_local_data": "Change local data",
+    "component_deactivated": "This component may be deactivated.",
+    "Example_component": "This is an example component.",
+    "Example_translation": "Example translation",
+    "Example_pluralization_merging": "Example for pluralization and merging translation files",
+    "changed_with_global_button": "changed with global button",
+    "Another_global_element": "Another global element",
+    "Test_group": "Test group"
 }
