--- a/example/src/assets/translations/es.json
+++ b/example/src/assets/translations/es.json
@@ -15,5 +15,6 @@
     "allow_cookies_disclaimer": "La aplicación web necesita permiso para usar cookies.",
     "allow_cookies_button": "Permitir cookies",
     "bytes_example": "{{count}} son 1KiB",
-    "example_component": "Ejemplo {{count}}"
+    "example_component": "Ejemplo {{count}}",
+    "Test_group": "Grupo de prueba"
 }
