fixed missing internationalization, fixed logic for showing a hook in front of the selected language and added logic for dialects, now showing the language options in alphabetical order

--- a/example/src/assets/translations/de-CH.json
+++ b/example/src/assets/translations/de-CH.json
@@ -1,5 +1,5 @@
 {
-    "option_name": "German",
+    "option_name": "German (Switzerland)",
     "bytes_example": "{{count}} sind 1KiB",
     "example_component": "Beispiel {{count}}",
     "Example_field_local": "Beispielfeld lokales Element {{count}}",
