--- a/example/src/assets/translations/es.json
+++ b/example/src/assets/translations/es.json
@@ -1,5 +1,7 @@
 {
     "option_name": "Spanish",
+    "Legal_documents": "Documentos legales",
+    "Customized_legal_documents": "Documentos legales personalizados",
     "Date": "Fecha",
     "Imprint": "Imprimir",
     "Germany": "Alemania",
