--- a/example/src/assets/translations/de-CH.json
+++ b/example/src/assets/translations/de-CH.json
@@ -1,5 +1,7 @@
 {
     "option_name": "German (Switzerland)",
+    "Legal_documents": "Dokumente",
+    "Customized_legal_documents": "Angepasste Dokumente",
     "bytes_example": "{{count}} sind 1KiB",
     "example_component": "Beispiel {{count}}",
     "Example_field_local": "Beispielfeld lokales Element {{count}}",
