adpated the readme and the release notes

--- a/scripts/ci_cd/release_notes/4.1.0.md
+++ b/scripts/ci_cd/release_notes/4.1.0.md
@@ -2,3 +2,13 @@
 - You are now able to replace the imprint in order to display a customized list of legal documents. To do this use the *documentsComponent* property of the *UILayer* component. If you don't specify an own component, the framework will display the default imprint as until this release.
 - You are now able to replace the *Imprint* text at the bottom of the navigation bar. To do this use the *documentsLabelKey* property of the *UILayer* component. The string has to be the key of translations which are specified in your translation files. If you don't specify *documentsLabelKey*, the framework will display the translation for "Imprint" as until this release.
 - Examples for both functionalities have been added to the example project.
+
+# Bug fixes
+- Fixed a bug which caused redirection from any manually typed in URL to the "starting point" if logged in.
+
+# Changes regarding the authentication system
+- The optional property *additionalContextItems* has been added to *DummyAuthenticationProvider*. By using this property you are able to pass additional values and functions which will be shared using the context *auth*. Please read the documentation for further information.
+- The *AWSAuthenticationProvider* in the example project has been replaced with the *DummyAuthenticationProvider*.
+
+# Other changes
+- If the user clicks the link to see the legal documents in the authentication view, a new tab will be opened.
