RSM-917: Refactored Content, implemented ContentCell & constants cleanup

--- a/scripts/ci_cd/release_notes/4.1.0.md
+++ b/scripts/ci_cd/release_notes/4.1.0.md
@@ -3,6 +3,10 @@
 - You are now able to replace the *Imprint* text at the bottom of the navigation bar. To do this use the *documentsLabelKey* property of the *UILayer* component. The string has to be the key of translations which are specified in your translation files. If you don't specify *documentsLabelKey*, the framework will display the translation for "Imprint" as until this release.
 - Examples for both functionalities have been added to the example project.
 
+# Refactored content layout
+- Content component can now be configured to use different layout base classes (NONE, GRID, FLEX, FLEX_COL) 
+- Implemented ContentCell for cells inside a grid in content area
+
 # Bug fixes
 - Fixed a bug which caused redirection from any manually typed in URL to the "starting point" if logged in.
 
