implementing the review comments

--- a/src/lib/assets/translations/de.json
+++ b/src/lib/assets/translations/de.json
@@ -1,7 +1,7 @@
 {
     "option_name": "German",
     "Date": "Datum",
-    "Imprint": "Impressum",
+    "Imprint": "Impressum / Datenschutz / Kontakt",
     "Germany": "Deutschland",
     "Internet": "Internet",
     "Headquarter": "Sitz",
