--- a/src/lib/assets/translations/en.json
+++ b/src/lib/assets/translations/en.json
@@ -1,7 +1,7 @@
 {
     "option_name": "English",
     "Date": "Date",
-    "Imprint": "Imprint",
+    "Imprint": "Imprint / Data Security / Contact",
     "Germany": "Germany",
     "Internet": "Internet",
     "Headquarter": "Headquarter",
