--- a/example/src/assets/translations/de.json
+++ b/example/src/assets/translations/de.json
@@ -1,6 +1,6 @@
 {
     "option_name": "German",
-    "Legal_documents": "angepasste Dokumente",
+    "Legal_documents": "Angepasste Dokumente",
     "Customized_legal_documents": "Angepasste Dokumente",
     "bytes_example": "{{count}} sind 1KiB",
     "example_component": "Beispiel {{count}}",
