--- a/scripts/ci_cd/release_notes/4.1.5.md
+++ b/scripts/ci_cd/release_notes/4.1.5.md
@@ -1,3 +1,3 @@
 # new features and design
-- now the Frameworks uses the new IAV Corporate Design with the new Logo and Colors 
-also there is a new option to customize the header from this framework with an individual logo or textelement-
+- Now the Framework uses the new IAV Corporate Design with the new Logo and Colors. 
+- Also there is a new option to customize the header from this framework with an individual logo or text element.
