adapting the patchnotes

--- a/scripts/ci_cd/release_notes/5.0.1.md
+++ b/scripts/ci_cd/release_notes/5.0.1.md
@@ -1,2 +1,2 @@
 # Patchnotes
-- Implenting the individualizing options to the authentication view.
+- Implented the options for individualisation of the authentication view.
