--- a/scripts/ci_cd/release_notes/5.0.1.md
+++ b/scripts/ci_cd/release_notes/5.0.1.md
@@ -1,2 +1,2 @@
 # Patchnotes
-- Implented the options for individualisation of the authentication view.
+- Implented the options for individualization of the authentication view.
