--- a/scripts/ci_cd/release_notes/5.1.3.md
+++ b/scripts/ci_cd/release_notes/5.1.3.md
@@ -1,3 +1,3 @@
 # Patchnotes
-- implemented new options for customizing the application header and the authentification header separately
-- implemented new options for setting indiviualized color schemas
+- Implemented new options for customizing the application header and the authentification header separately.
+- Implemented new options for setting indiviualized color schemas.
