--- a/example/src/assets/translations/es.json
+++ b/example/src/assets/translations/es.json
@@ -21,11 +21,22 @@
     "New_password": "Nueva contraseña",
     "bytes_example": "{{count}} son 1KiB",
     "example_component": "Ejemplo {{count}}",
-    "Test_group": "Grupo de prueba",
+    "Example_component_with_contentcell": "Ejemplo component con contentcell",
+    "No_contentbar_elements": "no contentbar elemento",
+    "Test_group_collapsible": "Grupo de prueba plegable",
+    "Test_group_not_collapsible": "Grupo de prueba no plagable",
     "Language": "Idioma",
     "replace_temporary_password": "Por favor, sustituya su contraseña temporal por una nueva. Su nueva contraseña tiene que cumplir los siguientes requisitos:",
     "password_req_8_characters": "Al menos 8 caracteres",
     "password_req_upper_lower_case": "Letras mayúsculas y minúsculas",
     "password_req_special_character": "Al menos un carácter especial",
-    "password_req_one_digit": "Al menos un dígito"
+    "password_req_one_digit": "Al menos un dígito",
+    "basic_div_tag_with_text": "cuerdo div tag con texto",
+    "i_am_translated": "estoy traducido",
+    "translate": "traducir",
+    "reset": "restablecen a los predeterminados",
+    "translation_and_colormode_example": "traducción y Modo de color Ejemplo",
+    "with_applied_dark_and_lightMode": "Con aplicado Modo de color",
+    "without_applied_dark_and_lightMode": "Sin aplicado Modo de color"
+
 }
