add actual confluence link and add designer

--- a/scripts/ci_cd/release_notes/6.0.0.md
+++ b/scripts/ci_cd/release_notes/6.0.0.md
@@ -46,4 +46,4 @@
 
 ## futher documentation
 
-- for further and more detailed documentation see the official git docs or the IAV documentation at confluence/iav/de
+- for further and more detailed documentation see the official git docs or the IAV documentation at https://confluence.iavgroup.local/display/TTT5Innovations/Documentation+Quick+Overview
