--- a/example/src/assets/translations/es.json
+++ b/example/src/assets/translations/es.json
@@ -37,6 +37,6 @@
     "reset": "restablecen a los predeterminados",
     "translation_and_colormode_example": "traducción y Modo de color Ejemplo",
     "with_applied_dark_and_lightMode": "Con aplicado Modo de color",
-    "without_applied_dark_and_lightMode": "Sin aplicado Modo de color"
-
+    "without_applied_dark_and_lightMode": "Sin aplicado Modo de color",
+    "car": "coche"
 }
