--- a/example/src/assets/translations/de.json
+++ b/example/src/assets/translations/de.json
@@ -26,5 +26,6 @@
     "reset": "zurücksetzen",
     "translation_and_colormode_example": "Übersetzungs und Farbmodi Beispiel",
     "with_applied_dark_and_lightMode": "Mit angewandtem Dark und Lightmode",
-    "without_applied_dark_and_lightMode": "Ohne angewandten Dark und Lightmode"
+    "without_applied_dark_and_lightMode": "Ohne angewandten Dark und Lightmode",
+    "car": "Auto"
 }
