updated release notes

--- a/scripts/ci_cd/release_notes/8.0.0.md
+++ b/scripts/ci_cd/release_notes/8.0.0.md
@@ -1,3 +1,6 @@
-# Changes
+# Breaking changes
+- Renamed components to remove the term "Disa" as this framework isn't just used in Disa projects anymore.
+
+# General changes
 - CI / CD Pipeline is now publishing to Artifactory
 - Changed documentation
