Added option to hide the logout button

--- a/scripts/ci_cd/release_notes/11.0.0.md
+++ b/scripts/ci_cd/release_notes/11.0.0.md
@@ -5,3 +5,8 @@ From now on the Content component manages which "contentAreaElement" is shown in
 - The interface "contentbarWrapperInterface" was adapted.
 
 Futhermore, the layout behaviour for grid and other layouts inside the content area isn't managed by the content component anymore. Instead the ContentLayout higher order component was introduced (see documentation). However, you can still use the content component with the layoutBehaviour property. The component will integrate ContentLayout on it's own.
+
+In addition the menuOptions property of the UILayer component was renamed into settingsMenuOptions.
+
+# New features
+- Added userMenuOptions property for the UILayer component. Using the option hideLogoutButton in userMenuOptions you are able to hide the logout button. If there are no options to show inside the user menu, the user menu will be hidden.
