Removed duplicated interface, Readded bg-white-1, Adapted release notes for 11.1.0

--- a/scripts/ci_cd/release_notes/11.1.0.md
+++ b/scripts/ci_cd/release_notes/11.1.0.md
@@ -1,6 +1,5 @@
 # Deprecation
 - Until this version CSS selectors using the CSS attribute data-theme could be used to implement the dark mode for custom components. This attribute was deprecated and will be removed in 12.0.0 since it will be replaced by the attribute color-theme.
-- The CSS class bg-white-1 will be replaced by bg-white in version 12.0.0.
 
 # Features
 - The option hideUserIcon was added to the header options in order to allow for hiding the user icon inside the header.
@@ -14,6 +13,6 @@
 # Bug fixes
 - As PrimeReact's menu component contained a bug older framework versions use an old version of PrimeReact. However, this bug was fixed with a new version of PrimeReact. Because of this the PrimeReact version used by the framework was updated.
 - There was a bug regarding the login form's input fields. There were cases in which the input field's background color would not adapt corretly when using the dark mode. This bug was fixed.
-- The framework provides CSS classes for colors. However, some classes were missing which are added with this release. These are: bg-white, color-blue-0.
+- The framework provides CSS classes for colors. However, a class was missing which is added with this release. This is: color-blue-0.
 - There were cases in which a scroll bar appeared for the whole page. The cause of this issue was a bug inside the navigation bar. This bug was fixed.
 - The gap between the info icon and the bottom of the navigation bar was too large when the navigation bar was static and collapsed. This bug was fixed.
