--- a/scripts/ci_cd/release_notes/12.0.2.md
+++ b/scripts/ci_cd/release_notes/12.0.2.md
@@ -1,5 +1,7 @@
 # Bug fixes
-- Update on Amplify 6; Refactoring of the regarding authentication code 
+
+- Update on Amplify 6; Refactoring of the regarding authentication code
 - Bug fix on smaller default colors and paddings such as
-    - Default color of the legal notice logo
-- Updating year to 2024
+  - Default color of the legal notice logo
+- Updating year due to legal issues to 2024
+- Removing company logo due to preperation to release the framework (open-source)
