improve readablity of code by providing constants to measurements

--- a/example/src/assets/translations/de-CH.json
+++ b/example/src/assets/translations/de-CH.json
@@ -27,6 +27,6 @@
     "translation_and_colormode_example": "Übersetzungs und Farbmodi Beispiel",
     "with_applied_dark_and_lightMode": "Mit angewandtem Dark und Lightmode",
     "without_applied_dark_and_lightMode": "Ohne angewandten Dark und Lightmode",
-    "car": "Auto",
-    "without_logo": "Ohne Logo"
+    "car": "Auto"
+  
 }
