--- a/example/src/assets/translations/de.json
+++ b/example/src/assets/translations/de.json
@@ -28,7 +28,5 @@
     "with_applied_dark_and_lightMode": "Mit angewandtem Dark und Lightmode",
     "without_applied_dark_and_lightMode": "Ohne angewandten Dark und Lightmode",
     "car": "Auto",
-    "login": {
-        "wrong": "Der Benutzername oder das Passwort ist falsch. Bitte versuche es erneut."
-    }
+    "wrong_password": "Der Benutzername oder das Passwort ist falsch. Bitte versuche es erneut."
 }
