--- a/example/src/assets/translations/en.json
+++ b/example/src/assets/translations/en.json
@@ -28,7 +28,5 @@
     "with_applied_dark_and_lightMode": "with applied dark and lightmode",
     "without_applied_dark_and_lightMode": "without applied dark and lightmode",
     "car": "car",
-    "login": {
-        "wrong": "The username or password is incorrect. Please try again."
-    }
+    "wrong_password": "The username or password is incorrect. Please try again."
 }
