--- a/packages/frontend-framework/src/assets/translations/en.json
+++ b/packages/frontend-framework/src/assets/translations/en.json
@@ -1,7 +1,8 @@
 {
   "option_name": "English",
   "Date": "Date",
-  "Imprint": "Imprint / Data Security / Contact",
+  "Imprint": "Imprint",
+  "Privacy_Policy": "Privacy Policy",
   "Germany": "Germany",
   "Internet": "Internet",
   "Headquarter": "Headquarter",
